--- a/templates/_wrapper.tt
+++ b/templates/_wrapper.tt
@@ -3,7 +3,7 @@
   <head>
     <meta charset=utf-8>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hatena::Newbie</title>
+    <title>Intern::Diary</title>
   </head>
   <body>
     [% content %]
