--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <p>[% entry.id %]</p>
     <p>[% entry.date %]</p>
     <h2>[% entry.title %]</h2>
-    <p>[% entry.text %]</p>
+    <p>[% entry.text | html_line_break %]</p>
     <br>
     [% END %]
 [% ELSE %]
