--- a/templates/entry/add.html
+++ b/templates/entry/add.html
@@ -1,5 +1,6 @@
 [% WRAPPER "_wrapper.tt" WITH title = "Intern::Diary::Add" %]
-
+  Intern-Diary
+  <h2>Add entry</h2>
 <form action="/entry/add" method="post">
   <table>
     <tr>
