--- a/templates/entry/delete.html
+++ b/templates/entry/delete.html
@@ -12,7 +12,7 @@
     <tr>
       <th><label for="text">Text</label></th>
       <td>
-        [% entry.text %]
+        [% entry.text | html_line_break %]
       </td>
     </tr>
     <tr>
