改行が表示されるようになった

--- a/templates/diary.html
+++ b/templates/diary.html
@@ -1,6 +1,6 @@
 [% WRAPPER '_wrapper.tt' %]
 <div class=row>
-  Intern-Diary
+  <a href="../">Intern::Diary</a>
   <a href="../">リストに戻る</a>
     <a href="./entry/add">記事を書く</a>
   <h2>Entry</h2>
