--- a/templates/entry/delete.html
+++ b/templates/entry/delete.html
@@ -1,5 +1,7 @@
 [% WRAPPER "_wrapper.tt" WITH title = "Intern::Diary::Delete" %]
-
+  <a href="../">Intern::Diary</a>
+  <a href="../">リストに戻る</a>
+  <a href="./entry/add">記事を書く</a>
 <form action="" method="post">
   <p>本当に削除しますか?</p>
   <table>
