--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,8 @@
 [% WRAPPER '_wrapper.tt' %]
 <div class=row>
-  Intern-Diary
+  <a href="../">Intern::Diary</a>
   <a href="./entry/list?page=1">個別記事</a>
+  <a href="./entry_js">JS版ページャつき個別記事</a>
   <a href="./entry/add">記事を書く</a><br>
   記事の編集/削除は記事の個別ページ(ページャ実装した)で可能です。
 </div>
