--- a/templates/entry/add.html
+++ b/templates/entry/add.html
@@ -1,7 +1,6 @@
 [% WRAPPER "_wrapper.tt" WITH title = "Intern::Diary::Add" %]
-  Intern-Diary
+  <a href="../">Intern::Diary</a>
     <a href="../">リストに戻る</a>
-  <a href="./entry?page=1">個別記事</a>
   <h2>Add entry</h2>
 <form action="/entry/add" method="post">
   <table>
