--- a/templates/entry/edit.html
+++ b/templates/entry/edit.html
@@ -1,6 +1,6 @@
 [% WRAPPER "_wrapper.tt" WITH title = "Intern::Diary::Edit" %]
-  Intern-Diary
-    <a href="./entry?page=1">個別記事</a>
+  <a href="../">Intern::Diary</a>
+  <a href="../">リストに戻る</a>
   <a href="./entry/add">記事を書く</a>
 <h2>Edit diary</h2>
 <form action="/entry/edit" method="post">
