--- a/templates/entry_js.html
+++ b/templates/entry_js.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class=row>
-      Intern-Diary
+      <a href="../">Intern::Diary</a>
       <a href="../">リストに戻る</a>
       <a href="./entry/add">記事を書く</a>
       <h2>Entry-JS</h2>
