--- a/templates/every_entry.html
+++ b/templates/every_entry.html
@@ -1,8 +1,8 @@
 [% WRAPPER '_wrapper.tt' %]
 <div class=row>
-  Intern-Diary
+  <a href="../">Intern::Diary</a>
   <a href="./">リストに戻る</a>
-    <a href="./entry/add">記事を書く</a>
+  <a href="./entry/add">記事を書く</a>
   <h2>Entry</h2>
 </div>
 <br>
