JS版のエントリ一覧に日付を表示できるようにした

--- a/templates/entry/edit.html
+++ b/templates/entry/edit.html
@@ -19,7 +19,7 @@
     </tr>
     <tr>
       <td colspan="2" class="submit">
-        <input type="submit" value="作成"/>
+        <input type="submit" value="編集"/>
         <input type="hidden" name="id" value="[% entry.id %]"/>
       </td>
     </tr>
