--- a/static/css/main.css
+++ b/static/css/main.css
@@ -27,3 +27,11 @@ h3:before{
 	background-color:#DB7BB1;
 	box-shadow: 0 0 2px 2px rgba(255,255,255,0.2) inset
 }
+
+.text{
+	width: 400px;
+}
+
+textarea{
+	height: 300px;
+}
